<resources>
    <string name="app_name">World News 24X7</string>
    <string name="title_activity_world_news">WorldNewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="general_news">General</string>
    <string name="business_news">Business</string>
    <string name="entertainment_news">Entertainment</string>
    <string name="health_news">Health</string>
    <string name="science_news">Science</string>
    <string name="sports_news">Sports</string>
    <string name="technology_news">Technology</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_article_image">News Article Image</string>
    <string name="news_title_goes_here">News Title Goes Here</string>
    <string name="category_key">CATEGORY</string>
    <string name="category_general">general</string>
    <string name="category_business">business</string>
    <string name="category_technology">technology</string>
    <string name="category_science">science</string>
    <string name="category_sports">sports</string>
    <string name="category_entertainment">entertainment</string>
    <string name="category_health">health</string>
    <string name="scroll_position">SCROLL_POSITION</string>
    <string name="title_activity_details_screen">DetailsScreen</string>
    <string name="news_image_cd">News Article Image</string>
    <string name="title_key">TITLE_KEY</string>
    <string name="description_key">DESCRIPTION_KEY</string>
    <string name="image_url_key">IMAGE_URL_KEY</string>
    <string name="news_url_key">NEWS_URL_KEY</string>
    <string name="click_here_to_save_the_article">Save this Article</string>
    <string name="unsave_article_button_text">Unsave this Article</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="button_text">Submit Feedback</string>
    <string name="hint_edit_text">Enter Your Feedback</string>
    <string name="no_internet_available">NO INTERNET</string>
    <string name="messages">INTERNET IS UNAVAILABLE!
Click YES to Open Saved News Articles</string>
    <string name="yes">Yes</string>
    <string name="closeapp">Close App</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="welcome_note">Hello, Welcome to World News 24X7.</string>
</resources>
